--- a/src/scenes/index.styl
+++ b/src/scenes/index.styl
@@ -4,7 +4,7 @@
   h3
     margin: 18px 0
 
-  h5
+  h4, h5
     margin-bottom: 10px
 
   a
@@ -15,5 +15,6 @@
   a:hover
     text-decoration: underline
 
-  .divs-with-margin-bottom div
+  .divs-with-margin-bottom div,
+  .divs-with-margin-bottom button
     margin-bottom: 10px
